--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="skills__container container grid">
           <div>
             <!-- Tecnologías 1 -->
-            <div class="skills__content">
+            <div class="skills__content skills__open">
               <div class="skills__header">
                 <i class="uil uil-brackets-curly skills__icon"></i>
                 <div>
@@ -164,7 +164,7 @@
                     <span class="skills__number">90%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__html"></span>
+                    <span class="skills__percentage skills__html"></span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -173,7 +173,7 @@
                     <span class="skills__number">70%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__css"></span>
+                    <span class="skills__percentage skills__css"></span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -182,7 +182,7 @@
                     <span class="skills__number">60%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__js"></span>
+                    <span class="skills__percentage skills__js"></span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -191,14 +191,14 @@
                     <span class="skills__number">35%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__react"></span>
+                    <span class="skills__percentage skills__react"></span>
                   </div>
                 </div>
               </div>
             </div>
 
             <!-- Tecnologías 2 -->
-            <div class="skills__content">
+            <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-server-network skills__icon"></i>
                 <div>
@@ -214,7 +214,7 @@
                     <span class="skills__number">45%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__php"></span>
+                    <span class="skills__percentage skills__php"></span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -223,7 +223,7 @@
                     <span class="skills__number">40%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__node"></span>
+                    <span class="skills__percentage skills__node"></span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -232,7 +232,7 @@
                     <span class="skills__number">25%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__firebase"></span>
+                    <span class="skills__percentage skills__firebase"></span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -241,7 +241,7 @@
                     <span class="skills__number">20%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__python"></span>
+                    <span class="skills__percentage skills__python"></span>
                   </div>
                 </div>
               </div>
@@ -250,7 +250,7 @@
 
           <div>
             <!-- Tecnologías 3 -->
-            <div class="skills__content">
+            <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-swatchbook skills__icon"></i>
                 <div>
@@ -266,7 +266,7 @@
                     <span class="skills__number">35%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__figma"></span>
+                    <span class="skills__percentage skills__figma"></span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -275,7 +275,7 @@
                     <span class="skills__number">30%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__illustrator"></span>
+                    <span class="skills__percentage skills__illustrator"></span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -284,7 +284,7 @@
                     <span class="skills__number">55%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skins__percentage skills__"></span>
+                    <span class="skills__percentage skills__balsamiq"></span>
                   </div>
                 </div>
               </div>
@@ -294,7 +294,196 @@
       </section>
 
       <!-- QUALIFICATION -->
-      <section class="qualification section"></section>
+      <section class="qualification section">
+        <h2 class="section__title">Información</h2>
+        <span class="section__subtitle">Mi viaje personal</span>
+
+        <div class="qualification__container container">
+          <div class="qualification__tabs">
+            <div class="qualification__button button--flex qualification__active" data-target="#education">
+              <i class="uil uil-graduation-cap qualification__icon"></i>
+              Educación
+            </div>
+
+            <div class="qualification__button button--flex" data-target="#work">
+              <i class="uil uil-bag qualification__icon"></i>
+              Trabajos
+            </div>
+          </div>
+
+          <div class="qualification__sections">
+            <!-- Content 01 -->
+            <div class="qualification__content qualification__active" data-content id="education">
+              <!-- 01 -->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Ingeniero de Sistemas</h3>
+                  <span class="qualification__subtitle">Universidad Señor de Sipan, Perú</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2012 - 2017
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <!-- 02 -->
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+                <div>
+                  <h3 class="qualification__title">Administración de Negocio - MBA</h3>
+                  <span class="qualification__subtitle">Universidad César Vallejo, Perú</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2018 - 2020
+                  </div>
+                </div>
+              </div>
+
+              <!-- 03 -->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Maestria en Ingenieria de Sistemas</h3>
+                  <span class="qualification__subtitle">Universidad César Vallejo, Perú</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2020 - 2022
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <!-- 04 -->
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+                <div>
+                  <h3 class="qualification__title">Professional en Coding</h3>
+                  <span class="qualification__subtitle">DEV.F, México</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2021 - 2022
+                  </div>
+                </div>
+              </div>
+
+              <!-- 05 -->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">JavaScript</h3>
+                  <span class="qualification__subtitle">Coderhouse, Argentina</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2022
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <!-- <span class="qualification__line"></span> -->
+                </div>
+              </div>
+            </div>
+
+            <!-- Content 02 -->
+            <div class="qualification__content" data-content id="work">
+              <!-- 01 -->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Coordinador</h3>
+                  <span class="qualification__subtitle">Universidad César Vallejo, Perú</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2021 - 2022
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <!-- 02 -->
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+                <div>
+                  <h3 class="qualification__title">Administración de Negocio - MBA</h3>
+                  <span class="qualification__subtitle">Universidad César Vallejo, Perú</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2018 - 2020
+                  </div>
+                </div>
+              </div>
+
+              <!-- 03 -->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Maestria en Ingenieria de Sistemas</h3>
+                  <span class="qualification__subtitle">Universidad César Vallejo, Perú</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2020 - 2022
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <!-- 04 -->
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+                <div>
+                  <h3 class="qualification__title">Professional en Coding</h3>
+                  <span class="qualification__subtitle">DEV.F, México</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2021 - 2022
+                  </div>
+                </div>
+              </div>
+
+              <!-- 05 -->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">JavaScript</h3>
+                  <span class="qualification__subtitle">Coderhouse, Argentina</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2022
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <!-- <span class="qualification__line"></span> -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- SERVICES -->
       <section class="services section" id="services"></section>
