--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- UNICONS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css" />
     <!-- SWIPER CSS -->
-
+    <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Hugo Oyola | FrontEnd Developer</title>
@@ -18,7 +18,7 @@
     <!-- HEADER -->
     <header class="header" id="header">
       <nav class="nav container">
-        <img src="/assets/img/logo.svg" width="5%" alt="" />
+        <img src="assets/img/logo.svg" width="5%" alt="" />
         <a href="#" class="nav__logo"> Hugo Developer</a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
@@ -486,10 +486,153 @@
       </section>
 
       <!-- SERVICES -->
-      <section class="services section" id="services"></section>
+      <section class="services section" id="services">
+        <h2 class="section__title">Servicios</h2>
+        <span class="section__subtitle">Lo que ofrezco</span>
+
+        <div class="services__container container grid">
+          <!-- Servicio 1 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-web-grid services__icon"></i>
+              <h3 class="services__title">
+                UI/UX <br />
+                Designer
+              </h3>
+            </div>
+            <span class="button button--flex button--small button--link services__button"> Ver más <i class="uil uil-arrow-right button__icon"></i></span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">
+                  UI/UX <br />
+                  Designer
+                </h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Desarrollo la interfaz de usuario.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Desarrollo de páginas web.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Creo las interacciones de elementos UX.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Posiciono la marca de tu empresa.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- Servicio 2 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-arrow services__icon"></i>
+              <h3 class="services__title">
+                Frontend <br />
+                Developer
+              </h3>
+            </div>
+            <span class="button button--flex button--small button--link services__button"> Ver más <i class="uil uil-arrow-right button__icon"></i></span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">
+                  Frontend <br />
+                  Developer
+                </h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Desarrollo la interfaz de usuario.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Desarrollo de páginas web.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Creo las interacciones de elementos UX.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Posiciono la marca de tu empresa.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- PORTFOLIO -->
-      <section class="portfolio section" id="portfolio"></section>
+      <section class="portfolio section" id="portfolio">
+        <h2 class="section__title">Portafolio</h2>
+        <span class="section__subtitle">Proyectos más recientes</span>
+
+        <div class="portfolio__container container swiper mySwiper">
+          <div class="swiper-wrapper">
+            <!-- Portfolio 01 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio1.jpg" alt="Website del Colegio NSL Jaén" class="portfolio__img" />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Modern Website</h3>
+                <p class="portfolio__description">Sitio web adaptable a todos los dispositivos, con componentes UI e interacciones animadas.</p>
+                <a href="#" class="button button--flex button--small portfolio__button">Ver <i class="uil uil-arrow-right button__icon"></i></a>
+              </div>
+            </div>
+            <!-- Portfolio 02 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio2.jpg" alt="Pokedex utilizando la API de Pokemon" class="portfolio__img" />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Pokedex API</h3>
+                <p class="portfolio__description">Sitio web adaptable a todos los dispositivos, con componentes UI e interacciones animadas.</p>
+                <a href="#" class="button button--flex button--small portfolio__button">Ver <i class="uil uil-arrow-right button__icon"></i></a>
+              </div>
+            </div>
+            <!-- Portfolio 03 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img" />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Clone de Pinterest</h3>
+                <p class="portfolio__description">Sitio web adaptable a todos los dispositivos, con componentes UI e interacciones animadas.</p>
+                <a href="#" class="button button--flex button--small portfolio__button">Ver <i class="uil uil-arrow-right button__icon"></i></a>
+              </div>
+            </div>
+            <!-- Portfolio 03 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img" />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Clone de Google</h3>
+                <p class="portfolio__description">Sitio web adaptable a todos los dispositivos, con componentes UI e interacciones animadas.</p>
+                <a href="#" class="button button--flex button--small portfolio__button">Ver <i class="uil uil-arrow-right button__icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="swiper-button-next">
+            <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+          </div>
+          <!-- Pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
 
       <!-- PROJECT IN MIND -->
       <section class="project section"></section>
@@ -507,7 +650,7 @@
     <!-- SCROLL TOP -->
 
     <!-- SWIPER JS -->
-    <!-- <script src=""></script> -->
+    <script src="./assets/js/swiper-bundle.min.js"></script>
 
     <!-- MAIN JS -->
     <script src="./assets/js/main.js"></script>
