--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
-              <a href="#home" class="nav__link"><i class="uil uil-estate nav__icon"></i> Inicio </a>
+              <a href="#home" class="nav__link active-link"><i class="uil uil-estate nav__icon"></i> Inicio </a>
             </li>
             <li class="nav__item">
               <a href="#about" class="nav__link"><i class="uil uil-user nav__icon"></i> Sobre mí</a>
@@ -635,17 +635,201 @@
       </section>
 
       <!-- PROJECT IN MIND -->
-      <section class="project section"></section>
+      <section class="project section">
+        <div class="project__bg">
+          <div class="project__container container grid">
+            <div class="project__data">
+              <h2 class="project__title">Tienes un nuevo proyecto</h2>
+              <p class="project__description">Contáctame ahora y obtén un 30% de descuento en tu nuevo proyecto</p>
+              <a href="#contact" class="button button--flex button--white">
+                Contáctame
+                <i class="uil uil-message project__icon button__icon"></i>
+              </a>
+            </div>
+
+            <img src="/assets/img/slogan.png" alt="" class="project__img" />
+          </div>
+        </div>
+      </section>
 
       <!-- TESTIMONIAL -->
-      <section class="testimonial section"></section>
+      <section class="testimonial section">
+        <h2 class="section__title">Testimonios</h2>
+        <span class="section__subtitle">Clientes satisfechos</span>
+
+        <div class="testimonial__container container swiper mySwiper">
+          <div class="swiper-wrapper">
+            <!-- Testimonial 01 -->
+            <div class="testimonial__content swiper-slide">
+              <div class="testimonial__data">
+                <div class="testimonial__header">
+                  <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img" />
+                  <div>
+                    <h3 class="testimonial__name">Ntra. Señora de Lourdes</h3>
+                    <span class="testimonial__client">Colegio - Cliente</span>
+                  </div>
+                </div>
+                <div>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                </div>
+              </div>
+              <p class="testimonial__description">
+                Me quedo con una buena impresión, realizo mi proyecto con toda la calidad posible y atención. Además me brinda soporte las 24 horas del día
+              </p>
+            </div>
+
+            <!-- Testimonial 02 -->
+            <div class="testimonial__content swiper-slide">
+              <div class="testimonial__data">
+                <div class="testimonial__header">
+                  <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img" />
+                  <div>
+                    <h3 class="testimonial__name">Shiseb Sleepwear</h3>
+                    <span class="testimonial__client">Cliente</span>
+                  </div>
+                </div>
+                <div>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                </div>
+              </div>
+              <p class="testimonial__description">
+                Me quedo con una buena impresión, realizo mi proyecto con toda la calidad posible y atención. Además me brinda soporte las 24 horas del día
+              </p>
+            </div>
+
+            <!-- Testimonial 03 -->
+            <div class="testimonial__content swiper-slide">
+              <div class="testimonial__data">
+                <div class="testimonial__header">
+                  <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img" />
+                  <div>
+                    <h3 class="testimonial__name">Cortex</h3>
+                    <span class="testimonial__client">Cliente</span>
+                  </div>
+                </div>
+                <div>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                </div>
+              </div>
+              <p class="testimonial__description">
+                Me quedo con una buena impresión, realizo mi proyecto con toda la calidad posible y atención. Además me brinda soporte las 24 horas del día
+              </p>
+            </div>
+          </div>
+          <div class="swiper-pagination swiper-pagination-testimonial"></div>
+        </div>
+      </section>
 
       <!-- CONTACT ME -->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <h2 class="section__title">Contáctame</h2>
+        <span class="section__subtitle">Ponerse en contacto</span>
+
+        <div class="contact__container container gri">
+          <div>
+            <div class="contact__information">
+              <i class="uil uil-phone contact__icon"></i>
+              <div>
+                <h3 class="contact__title">Llámame</h3>
+                <span class="contact__subtitle">954-902-511</span>
+              </div>
+            </div>
+
+            <div class="contact__information">
+              <i class="uil uil-envelope contact__icon"></i>
+              <div>
+                <h3 class="contact__title">Email</h3>
+                <span class="contact__subtitle">hugo212h@gmail.com</span>
+              </div>
+            </div>
+
+            <div class="contact__information">
+              <i class="uil uil-map-marker contact__icon"></i>
+              <div>
+                <h3 class="contact__title">Ubicame</h3>
+                <span class="contact__subtitle">Calle Buenos Aires #229 - Chiclayo</span>
+              </div>
+            </div>
+          </div>
+          <form action="" class="contact__form grid">
+            <div class="contact__inputs grid">
+              <div class="contact__content">
+                <label for="" class="contact__label">Nombre</label>
+                <input type="text" class="contact__input" title="" placeholder="Ingrese nombre" />
+              </div>
+              <div class="contact__content">
+                <label for="" class="contact__label">Email</label>
+                <input type="email" class="contact__input" title="" placeholder="Ingrese email" />
+              </div>
+            </div>
+            <div class="contact__content">
+              <label for="" class="contact__label">Proyecto</label>
+              <input type="text" class="contact__input" title="" placeholder="Nombre del proyecto" />
+            </div>
+            <div class="contact__content">
+              <label for="" class="contact__label">Mensaje</label>
+              <textarea name="" id="" cols="0" rows="7" class="contact__input" placeholder="Nombre del Mensaje"></textarea>
+            </div>
+            <div>
+              <a href="#" class="button button--flex">
+                Enviar Mensaje
+                <i class="uil uil-message button__icon"></i>
+              </a>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
 
     <!-- FOOTER -->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__bg">
+        <div class="footer__container container grid">
+          <div>
+            <h1 class="footer__title">Hugo</h1>
+            <span class="footer__subtitle">Frontend Developer</span>
+          </div>
+
+          <ul class="footer__links">
+            <li>
+              <a href="#services" class="footer__link">Servicios</a>
+            </li>
+            <li>
+              <a href="#portfolio" class="footer__link">Portafolio</a>
+            </li>
+            <li>
+              <a href="#contact" class="footer__link">Contáctame</a>
+            </li>
+          </ul>
+
+          <div class="footer__socials">
+            <a href="#" target="_blank" class="footer__social">
+              <i class="uil uil-facebook-f"></i>
+            </a>
+            <a href="#" target="_blank" class="footer__social">
+              <i class="uil uil-instagram"></i>
+            </a>
+            <a href="#" target="_blank" class="footer__social">
+              <i class="uil uil-whatsapp"></i>
+            </a>
+          </div>
+        </div>
+
+        <p class="footer__copy">&#169; 2022 Hugo Developer. All rights reserved.</p>
+      </div>
+    </footer>
 
     <!-- SCROLL TOP -->
 
