Adeptable para todos los dispositivos

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
         <div class="nav__btns">
+          <!-- Theme change color button-->
+          <i class="uil uil-moon change-theme" id="theme-button"></i>
+
           <div class="nav__toggle" id="nav-toggle">
             <i class="uil uil-apps"></i>
           </div>
@@ -737,7 +740,7 @@
         <h2 class="section__title">Contáctame</h2>
         <span class="section__subtitle">Ponerse en contacto</span>
 
-        <div class="contact__container container gri">
+        <div class="contact__container container grid">
           <div>
             <div class="contact__information">
               <i class="uil uil-phone contact__icon"></i>
