Agregando CV en PDF

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
               </a>
             </div>
 
-            <img src="/assets/img/slogan.png" alt="" class="project__img" />
+            <img src="./assets/img/slogan.png" alt="" class="project__img" />
           </div>
         </div>
       </section>
