--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               </div>
             </div>
             <div class="about__buttons">
-              <a download="" href="#" class="button button--flex">Descargar CV <i class="uil uil-download-alt button__icon"></i></a>
+              <a download="" href="./assets/pdf/CV_HugoHamiltonOyolaYarlaque.pdf" class="button button--flex">Descargar CV <i class="uil uil-download-alt button__icon"></i></a>
             </div>
           </div>
         </div>
